--- a/src/assets/css/currentuser.css
+++ b/src/assets/css/currentuser.css
@@ -1,4 +1,5 @@
 .welcome {
-	float: right;
+	position: absolute;
+	right: 0;
 	margin-top: 1rem;
 }
